--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.5.0",
+    "css-loader": "^6.7.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "app.css": "^0.1.2"
   }
 }
